# esp-who-apml

./: README.md
components/esp-dl/tools/quantization_tool/examples/: M1.onnx  M1_calib.pickle  M1_optimized.onnx  custom_coefficient.cpp  example.py
components/modules/: CMakeLists.txt
components/modules/custom_lcd/: custom_lcd.c  custom_lcd.h
examples/color_detection-modified/lcd/main/: app_main.cpp
examples/color_detection/lcd/: sdkconfig  sdkconfig.old
examples/color_detection/lcd/main/: CMakeLists.txt  app_main.cpp
examples/color_detection/lcd/model/: custom_coefficient.cpp  custom_coefficient.hpp  custom_coefficient_model.hpp
examples/esp32-s3-eye/: sdkconfig
